--- a/start/static/css/style.css
+++ b/start/static/css/style.css
@@ -29,8 +29,12 @@
     display: block;
     background-image: url("../img/google_sign.png");
     position: relative;
-    width: 486px;
+    width: 390px;
     height: 63px;
+    border: solid;
+    border-width: 1px;
+    border-color: black;
+    box-shadow: 5px 5px 5px 0px #000000;
 }
 .googlebt2 {
     display: table-cell;
@@ -38,9 +42,10 @@
     vertical-align: middle;
     color: #555;
     text-decoration: none;
-    width: 486px;
+    width: 390px;
     height: 63px;
 }
+
 .profil-pic {
     width: 50px;
     height: 50px;
