--- a/start/templates/start/base.html
+++ b/start/templates/start/base.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Kawaitree</title>
-    <link rel="stylesheet" href="static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="static/img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="static/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="static/img/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon-16x16.png' %}">
 </head>
 <body>
 <div class="container-fluid noir no-padl">
@@ -34,7 +34,14 @@
   </div>
 
 </div>
-<p>&nbsp;</p>
+        {% if messages %}
+            {% for message in messages %}
+                <div class="container alert alert-dismissible alert-{{ message.tags }} mt-3">
+                    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                    {{message}}
+                </div>
+            {% endfor%}
+        {% endif %}
         {% block content %}{% endblock %}
 
 
