--- a/core/templates/core/tree_form.html
+++ b/core/templates/core/tree_form.html
@@ -3,6 +3,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 {% load socialaccount %}
+
 <div class="container">
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
@@ -16,4 +17,7 @@
     </div>
   </form>
 </div>
+<script>
+
+</script>
 {% endblock content%}
