--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -81,5 +81,9 @@
     {% endfor%}
 {% endif %}
 {% block content %}{% endblock %}
+&nbsp;<br>
+<div class="fluid border-top border-primary">
+    <p class="text-center font-weight-light small">Kawaï tree web application V 1.0 - 2022</p>
+</div>
 </body>
 </html>
