--- a/core/templates/core/tdb.html
+++ b/core/templates/core/tdb.html
@@ -1,15 +1,63 @@
 {% extends "core/base.html" %}
 {% load i18n %}
+{% load l10n %}
 {% block content %}
   {% load socialaccount %}
 <div class="container">
     <h1 class="mt-3">{{ content.titre }}</h1>
+  <h3 class="mt-1">{% trans 'Next planned tasks' %}</h3>
+  <div class="accordion" id="accordionnexttasks">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="Headingnexttasks">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsenexttasks" aria-expanded="true" aria-controls="collapsenexttasks">
+          {% trans 'Next 3 months' %}
+        </button>
+      </h2>
+      <div id="collapsenexttasks" class="accordion-collapse collapse" aria-labelledby="heading nexttasks" data-bs-parent="#accordionnexttasks">
+        <div class="accordion-body">
+
+          {% if not nexttasks %}
+            <p>{% trans 'No task planned in the next 90 days.' %}</p>
+          {% else %}
+          <table class="table table-dark mt-2">
+            <thead>
+              <tr>
+                <th>{% trans 'Planned date' %}</th>
+                <th>{% trans 'Tree name' %}</th>
+                <th>{% trans 'Task' %}</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for nexttask in nexttasks %}
+              <tr>
+                <td>
+                  {{ nexttask.plan_date }}
+                </td>
+                <td>
+                  {{ nexttask.treefk }}
+                </td>
+                <td>
+                  {{ nexttask.tasklistfk }}
+                </td>
+                <td>
+                  <a href="{% url 'task-update' nexttask.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Edit' %}</a>
+                </td>
+            </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+          {% endif %}
+        </div>
+    </div>
+  </div>
+
+  <h3 class="mt-1">{% trans 'Trees' %}</h3>
   <div class="accordion" id="accordiontrees">
     {% if not trees %}
         <p>{% trans 'No tree in your collection.' %}</p>
     {% endif %}
     {% for tree in trees %}
-
     <div class="accordion-item">
       <h2 class="accordion-header" id="Heading{{ tree.id }}">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ tree.id }}" aria-expanded="true" aria-controls="collapse{{ tree.id }}">
@@ -24,7 +72,7 @@
               {% trans 'Description:' %} {{ tree.description }} <br>
               <i><small>{% trans 'Planting date:' %} {{ tree.bdate }} </small></i><br>
               <small>{% trans 'Acquisition date:' %} {{ tree.adate }} </small><br>
-              <small>{% trans 'Shop/ex-owner:' %} {{ tree.shop }} </small><br>
+              <small>{% trans 'Origin:' %} {{ tree.originfk }} </small><br>
               {{ tree.ownerfk }}
               </p>
               <a href="{% url 'tree-detail' tree.id %}" class="btn btn-outline-info btn-sm" role="button" >{% trans 'Detail' %}</a>
@@ -35,11 +83,46 @@
               <img src="{{ tree.treePic.url }}">
             </div>
           </div>
+          <table class="table table-dark mt-2">
+        <thead>
+          <tr>
+            <th>{% trans 'Task' %}</th>
+            <th>{% trans 'Planned date' %}</th>
+            <th>{% trans 'Realisation date' %}</th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for task in tasks %}
+          <tr>
+            {% if task.treefk == tree %}
+              <td>
+                {{ task.tasklistfk }}
+              </td>
+              <td>
+                {{ task.plan_date }}
+              </td>
+              <td>
+                {{ task.real_date }}
+              </td>
+              <td>
+                <a href="{% url 'task-update' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Edit' %}</a>
+              </td>
+              <td>
+                <a href="{% url 'task-delete' task.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" >{% trans 'Delete' %}</a>
+              </td>
+            {% endif %}
+        </tr>
+          {% endfor %}
+        </tbody>
+          </table>
+          <a href="{% url 'task-create' tree.id %}" class="btn btn-outline-success btn-sm mt-1" role="button" >{% trans 'Add task' %}</a>
         </div>
       </div>
     </div>
     {% endfor %}
-    <a href="{% url 'tree-create'%}" class="btn btn-outline-success btn-sm mt-1" role="button" >{% trans 'Add a tree' %}</a>
+    <a href="{% url 'tree-create' %}" class="btn btn-outline-success btn-sm mt-1" role="button" >{% trans 'Add a tree' %}</a>
   </div>
 </div>
 {% endblock content%}
