--- a/start/templates/start/base.html
+++ b/start/templates/start/base.html
@@ -15,21 +15,18 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon-16x16.png' %}">
 </head>
 <body>
+{% get_current_language as LANGUAGE_CODE %}
+<!-- Current language: {{ LANGUAGE_CODE }} -->
 <div class="container-fluid noir no-padl">
   <div class="row row-cols-auto">
-    <div class="col">
+    <div class="col h-100 d-inline-block">
       <img src="{% static 'img/kawaiitree.jpg' %}">
     </div>
-    <div class="col vcenter">
+    <div class="col vcenter h-100 d-inline-block">
       <h1 class="mtb2">Kawaï tree</h1>
     </div>
-    <div class="col vcenter">
-
-        {% get_current_language as LANGUAGE_CODE %}
-    <!-- Current language: {{ LANGUAGE_CODE }} -->
-
+    <div class="col vcenter h-100 d-inline-block">
         <h5>{{ content.titre }}</h5>
-
     </div>
   </div>
 
@@ -43,7 +40,10 @@
             {% endfor%}
         {% endif %}
         {% block content %}{% endblock %}
-
+&nbsp;<br>
+<div class="fluid border-top border-primary">
+    <p class="text-center font-weight-light small">Kawaï tree web application V 1.0 - 2022</p>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
