--- a/core/templates/core/photo_form.html
+++ b/core/templates/core/photo_form.html
@@ -1,5 +1,6 @@
 {% extends "core/base.html" %}
 {% load i18n %}
+
 {% load crispy_forms_tags %}
 {% block content %}
 {% load socialaccount %}
@@ -8,18 +9,13 @@
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <fieldset class="form-group">
-      <legend class="border-bottom mp-4">{% trans 'Tree' %}</legend>
+      <legend class="border-bottom mp-4">{% trans 'Photo' %}</legend>
       <div class="row">
         <div class="col-xl">
-          {{ form.tname|as_crispy_field }}
+          {{ form.treefk|as_crispy_field }}
         </div>
         <div class="col-xl">
-          {{ form.originfk|as_crispy_field }}
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xl">
-          {{ form.speciesfk|as_crispy_field }}
+          {{ form.taskfk|as_crispy_field }}
         </div>
       </div>
       <div class="row">
@@ -29,28 +25,31 @@
       </div>
       <div class="row">
         <div class="col-xl">
-          <div id="div_id_bdate" class="mb-3">
-              <label for="id_bdate" class="form-label">{% trans 'Planting date' %}</label>
-              <input type="date" name="bdate" value="{{ form.bdate.value|date:'Y-m-d' }}" class="dateinput form-control" id="id_bdate">
-          </div>
-        </div>
-        <div class="col-xl">
-          <div id="div_id_adate" class="mb-3">
-              <label for="id_adate" class="form-label">{% trans 'Acquisition date' %}</label>
-              <input type="date" name="adate" value="{{ form.adate.value|date:'Y-m-d' }}" class="dateinput form-control" id="id_adate">
+          <div id="div_id_shot_date" class="mb-3">
+              <label for="id_shot_date" class="form-label">{% trans 'Shot date' %}</label>
+              <input type="date" name="shot_date" value="{{ form.shot_date.value|date:'Y-m-d' }}" class="dateinput form-control" id="id_shot_date">
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xl">
-          {{ form.treePic|as_crispy_field }}
+          {{ form.before_pic|as_crispy_field }}
+        </div>
+        <div class="col-xl">
+          {{ form.after_pic|as_crispy_field }}
         </div>
       </div>
       <div class="row">
         <div class="col-xl">
-          {{ form.url|as_crispy_field }}
+          {{ form.picture|as_crispy_field }}
         </div>
       </div>
+      <div class="row">
+        <div class="col-xl">
+          {{ form.thumb|as_crispy_field }}
+        </div>
+      </div>
+
     </fieldset>
     <div class="form-group">
       <button class="btn btn-outline-success" type="submit">{% trans 'Ok' %}</button>
