--- a/core/templates/core/task_form.html
+++ b/core/templates/core/task_form.html
@@ -37,6 +37,11 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-xl">
+          {{ form.url|as_crispy_field }}
+        </div>
+      </div>
     </fieldset>
     <div class="form-group">
       <button class="btn btn-outline-success" type="submit">{% trans 'Ok' %}</button>
