--- a/core/templates/core/tree_list.html
+++ b/core/templates/core/tree_list.html
@@ -24,11 +24,16 @@
         <i><small>{% trans 'Planting date:' %} {{ tree.bdate }} </small></i><br>
         <small>{% trans 'Acquisition date:' %} {{ tree.adate }} </small><br>
         <small>{% trans 'Origin:' %} {{ tree.originfk }} </small><br>
-        {{ tree.ownerfk }}
+        {{ tree.ownerfk }}<br>
+        {% if tree.url %}
+          <a href="{{ tree.url }}" target="_blank">{{ tree.url }}</a>
+        {% endif %}
         </p>
-        <a href="{% url 'tree-detail' tree.id %}" class="btn btn-outline-info btn-sm" role="button" >{% trans 'Detail' %}</a>
-        <a href="{% url 'tree-update' tree.id %}" class="btn btn-outline-info btn-sm" role="button" >{% trans 'Edit' %}</a>
-        <a href="{% url 'tree-delete' tree.id %}" class="btn btn-outline-danger btn-sm" role="button" >{% trans 'Delete' %}</a>
+        {% if tree.ownerfk == request.user %}
+          <a href="{% url 'tree-detail' tree.id %}" class="btn btn-outline-info btn-sm" role="button" >{% trans 'Details' %}</a>
+          <a href="{% url 'tree-update' tree.id %}" class="btn btn-outline-info btn-sm" role="button" >{% trans 'Edit' %}</a>
+          <a href="{% url 'tree-delete' tree.id %}" class="btn btn-outline-danger btn-sm" role="button" >{% trans 'Delete' %}</a>
+        {% endif %}
       </div>
     </div>
   </div>
