--- a/core/templates/core/tdb.html
+++ b/core/templates/core/tdb.html
@@ -5,53 +5,60 @@
   {% load socialaccount %}
 <div class="container">
     <h1 class="mt-3">{{ content.titre }}</h1>
-  <h3 class="mt-1">{% trans 'Next planned tasks' %}</h3>
-  <div class="accordion" id="accordionnexttasks">
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="Headingnexttasks">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsenexttasks" aria-expanded="true" aria-controls="collapsenexttasks">
-          {% trans 'Next 3 months' %}
-        </button>
-      </h2>
-      <div id="collapsenexttasks" class="accordion-collapse collapse" aria-labelledby="heading nexttasks" data-bs-parent="#accordionnexttasks">
-        <div class="accordion-body">
-
-          {% if not nexttasks %}
-            <p>{% trans 'No task planned in the next 90 days.' %}</p>
-          {% else %}
-          <table class="table table-dark mt-2">
-            <thead>
-              <tr>
-                <th>{% trans 'Planned date' %}</th>
-                <th>{% trans 'Tree name' %}</th>
-                <th>{% trans 'Task' %}</th>
-                <th></th>
+  {% if not nexttasks %}
+    <p>{% trans 'No task planned in the next 90 days.' %}</p>
+  {% else %}
+    <h3 class="mt-1">{% trans 'Next planned tasks' %}</h3>
+    <div class="accordion" id="accordionnexttasks">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="Headingnexttasks">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsenexttasks" aria-expanded="true" aria-controls="collapsenexttasks">
+            {% trans 'Next 3 months' %}
+          </button>
+        </h2>
+        <div id="collapsenexttasks" class="accordion-collapse collapse" aria-labelledby="heading nexttasks" data-bs-parent="#accordionnexttasks">
+          <div class="accordion-body">
+            <table class="table table-dark mt-2">
+              <thead>
+                <tr>
+                  <th>{% trans 'Planned date' %}</th>
+                  <th>{% trans 'Tree name' %}</th>
+                  <th>{% trans 'Task' %}</th>
+                  <th></th>
+                  <th class="d-none d-md-table-cell"></th>
+                  <th class="d-none d-md-table-cell"></th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for nexttask in nexttasks %}
+                <tr>
+                  <td>
+                    {{ nexttask.plan_date }}
+                  </td>
+                  <td>
+                    {{ nexttask.treefk }}
+                  </td>
+                  <td>
+                    {{ nexttask.tasklistfk }}
+                  </td>
+                  <td>
+                    <a href="{% url 'task-detail' nexttask.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Details' %}</a>
+                  </td>
+                  <td class="d-none d-md-table-cell">
+                    <a href="{% url 'task-update' nexttask.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Edit' %}</a>
+                  </td>
+                  <td class="d-none d-md-table-cell">
+                    <a href="{% url 'task-delete' nexttask.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" >{% trans 'Delete' %}</a>
+                  </td>
               </tr>
-            </thead>
-            <tbody>
-              {% for nexttask in nexttasks %}
-              <tr>
-                <td>
-                  {{ nexttask.plan_date }}
-                </td>
-                <td>
-                  {{ nexttask.treefk }}
-                </td>
-                <td>
-                  {{ nexttask.tasklistfk }}
-                </td>
-                <td>
-                  <a href="{% url 'task-update' nexttask.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Edit' %}</a>
-                </td>
-            </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-          {% endif %}
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
         </div>
+      </div>
     </div>
-  </div>
-
+  {% endif %}
   <h3 class="mt-1">{% trans 'Trees' %}</h3>
   <div class="accordion" id="accordiontrees">
     {% if not trees %}
@@ -68,14 +75,16 @@
         <div class="accordion-body">
           <div class="row">
             <div class="col">
-              <p>{% trans 'Species:' %} {{ tree.speciesfk.sname }} <br>
-              {% trans 'Description:' %} {{ tree.description }} <br>
-              <i><small>{% trans 'Planting date:' %} {{ tree.bdate }} </small></i><br>
-              <small>{% trans 'Acquisition date:' %} {{ tree.adate }} </small><br>
-              <small>{% trans 'Origin:' %} {{ tree.originfk }} </small><br>
-              {{ tree.ownerfk }}
+              <p>{% trans 'Species:' %} <i>{{ tree.speciesfk}} </i><br>
+              {% trans 'Description:' %} <i>{{ tree.description }} </i><br>
+              <small>{% trans 'Planting date:' %} <i>{{ tree.bdate }}</i></small><br>
+              <small>{% trans 'Acquisition date:' %} <i>{{ tree.adate }}</i></small><br>
+              <small>{% trans 'Origin:' %} <i>{{ tree.originfk }}</i></small>
+              {% if tree.url %}
+                <br><a href="{{ tree.url }}" target="_blank">{{ tree.url }}</a>
+              {% endif %}
               </p>
-              <a href="{% url 'tree-detail' tree.id %}" class="btn btn-outline-info btn-sm" role="button" >{% trans 'Detail' %}</a>
+              <a href="{% url 'tree-detail' tree.id %}" class="btn btn-outline-info btn-sm" role="button" >{% trans 'Details' %}</a>
               <a href="{% url 'tree-update' tree.id %}" class="btn btn-outline-info btn-sm" role="button" >{% trans 'Edit' %}</a>
               <a href="{% url 'tree-delete' tree.id %}" class="btn btn-outline-danger btn-sm" role="button" >{% trans 'Delete' %}</a>
             </div>
@@ -84,38 +93,42 @@
             </div>
           </div>
           <table class="table table-dark mt-2">
-        <thead>
-          <tr>
-            <th>{% trans 'Task' %}</th>
-            <th>{% trans 'Planned date' %}</th>
-            <th>{% trans 'Realisation date' %}</th>
-            <th></th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for task in tasks %}
-          <tr>
-            {% if task.treefk == tree %}
-              <td>
-                {{ task.tasklistfk }}
-              </td>
-              <td>
-                {{ task.plan_date }}
-              </td>
-              <td>
-                {{ task.real_date }}
-              </td>
-              <td>
-                <a href="{% url 'task-update' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Edit' %}</a>
-              </td>
-              <td>
-                <a href="{% url 'task-delete' task.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" >{% trans 'Delete' %}</a>
-              </td>
-            {% endif %}
-        </tr>
-          {% endfor %}
-        </tbody>
+            <thead>
+              <tr>
+                <th>{% trans 'Task' %}</th>
+                <th>{% trans 'Planned date' %}</th>
+                <th>{% trans 'Realisation date' %}</th>
+                <th></th>
+                <th class="d-none d-md-table-cell"></th>
+                <th class="d-none d-md-table-cell"></th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for task in tasks %}
+              <tr>
+                {% if task.treefk == tree %}
+                  <td>
+                    {{ task.tasklistfk }}
+                  </td>
+                  <td>
+                    {{ task.plan_date }}
+                  </td>
+                  <td>
+                    {{ task.real_date }}
+                  </td>
+                  <td>
+                    <a href="{% url 'task-detail' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Details' %}</a>
+                  </td>
+                  <td class="d-none d-md-table-cell">
+                    <a href="{% url 'task-update' task.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Edit' %}</a>
+                  </td>
+                  <td class="d-none d-md-table-cell">
+                    <a href="{% url 'task-delete' task.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" >{% trans 'Delete' %}</a>
+                  </td>
+                {% endif %}
+            </tr>
+              {% endfor %}
+            </tbody>
           </table>
           <a href="{% url 'task-create' tree.id %}" class="btn btn-outline-success btn-sm mt-1" role="button" >{% trans 'Add task' %}</a>
         </div>
