--- a/core/templates/core/tree_detail.html
+++ b/core/templates/core/tree_detail.html
@@ -3,18 +3,22 @@
 {% block content %}
 {% load socialaccount %}
 <div class="container" xmlns="http://www.w3.org/1999/html">
-    <h1 class="mt-3">{% trans 'Detail' %}</h1>
+    <h1 class="mt-3">{% trans 'Details' %}</h1>
     <div class="card text-white bg-secondary mb-3" style="max-width: 60rem;">
       <div class="card-header">{{ object.tname }}</div>
       <div class="card-body">
         <div class="row">
           <div class="col">
-            <h5 class="card-title">{% trans 'Species:' %} {{ object.speciesfk.sname }}</h5>
-            <p class="card-text">{% trans 'Description:' %} {{ object.description }} <br>
-            <i><small>{% trans 'Planting date:' %} {{ object.bdate }} </small></i><br>
+            <h5 class="card-title">{% trans 'Species:' %} <i>{{ object.speciesfk }}</i></h5>
+            <p class="card-text">{% trans 'Description:' %} <i>{{ object.description }} </i><br>
+            <span class="font-italic"><small>{% trans 'Planting date:' %} {{ object.bdate }} </small></span><br>
             <small>{% trans 'Acquisition date:' %} {{ object.adate }} </small><br>
             <small>{% trans 'Origin:' %} {{ object.originfk }} </small><br>
             {{ object.ownerfk }}<br>
+            {% if object.url %}
+              <a href="{{ object.url }}" target="_blank">{{ object.url }}</a><br>
+            {% endif %}
+            <br>
             {% if request.user == object.ownerfk %}
               <a href="{% url 'tree-update' tree.id %}" class="btn btn-outline-info btn-sm" role="button" >{% trans 'Edit' %}</a>
               <a href="{% url 'tree-delete' tree.id %}" class="btn btn-outline-danger btn-sm" role="button" >{% trans 'Delete' %}</a>
