--- a/core/templates/core/tdb.html
+++ b/core/templates/core/tdb.html
@@ -5,6 +5,60 @@
   {% load socialaccount %}
 <div class="container">
     <h1 class="mt-3">{{ content.titre }}</h1>
+  {% if overduetasks %}
+    <h3 class="mt-1">{% trans 'Overdue tasks' %}</h3>
+    <div class="accordion" id="accordionoverduetasks">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="Headingoverduetasks">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseoverduetasks" aria-expanded="true" aria-controls="collapseoverduetasks">
+            {% trans 'You may be late...' %}
+          </button>
+        </h2>
+        <div id="collapseoverduetasks" class="accordion-collapse collapse" aria-labelledby="heading overduetasks" data-bs-parent="#accordionoverduetasks">
+          <div class="accordion-body">
+            <table class="table table-dark mt-2">
+              <thead>
+                <tr>
+                  <th>{% trans 'Planned date' %}</th>
+                  <th>{% trans 'Tree name' %}</th>
+                  <th>{% trans 'Task' %}</th>
+                  <th></th>
+                  <th class="d-none d-md-table-cell"></th>
+                  <th class="d-none d-md-table-cell"></th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for overduetask in overduetasks %}
+                <tr>
+                  <td>
+                    {{ overduetask.plan_date }}
+                  </td>
+                  <td>
+                    {{ overduetask.treefk }}
+                  </td>
+                  <td>
+                    {{ overduetask.tasklistfk }}
+                  </td>
+                  <td>
+                    <a href="{% url 'task-detail' overduetask.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Details' %}</a>
+                  </td>
+                  <td class="d-none d-md-table-cell">
+                    <a href="{% url 'task-update' overduetask.id %}" class="btn btn-outline-info btn-sm mt-1" role="button" >{% trans 'Edit' %}</a>
+                  </td>
+                  <td class="d-none d-md-table-cell">
+                    <a href="{% url 'task-delete' overduetask.id %}" class="btn btn-outline-danger btn-sm mt-1" role="button" >{% trans 'Delete' %}</a>
+                  </td>
+              </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  {% endif %}
+
+
   {% if not nexttasks %}
     <p>{% trans 'No task planned in the next 90 days.' %}</p>
   {% else %}
@@ -131,6 +185,7 @@
             </tbody>
           </table>
           <a href="{% url 'task-create' tree.id %}" class="btn btn-outline-success btn-sm mt-1" role="button" >{% trans 'Add task' %}</a>
+
         </div>
       </div>
     </div>
