--- a/core/templates/core/photo_detail.html
+++ b/core/templates/core/photo_detail.html
@@ -3,8 +3,8 @@
 {% block content %}
 {% load socialaccount %}
 <div class="container" xmlns="http://www.w3.org/1999/html">
-    <h1 class="mt-3">{% trans 'Details' %}</h1>
-    <div class="card text-white bg-secondary mb-3" style="max-width: 60rem;">
+    <h1 class="mt-3">{% trans 'Detail' %}</h1>
+    <div class="card text-white bg-secondary mb-3">
       <div class="card-header">{{ object.treefk }}</div>
       <div class="card-body">
         <div class="row">
@@ -26,7 +26,7 @@
         </div>
         <div class="row mt-2 mb-2">
           <div class="col">
-            <img src="{{ object.picture.url }}">
+            <img src="{{ object.picture.url }}" class="autoresizeimg">
           </div>
         </div>
             {% if request.user == object.treefk.ownerfk %}
