--- a/core/templates/core/task_detail.html
+++ b/core/templates/core/task_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load socialaccount %}
 <div class="container" xmlns="http://www.w3.org/1999/html">
-    <h1 class="mt-3">{% trans 'Details' %}</h1>
+    <h1 class="mt-3">{% trans 'Detail' %}</h1>
     <div class="card text-white bg-secondary mb-3" style="max-width: 60rem;">
       <div class="card-header">{{ task.tasklistfk }}</div>
       <div class="card-body">
