traduction des listes

--- a/core/templates/core/tree_form.html
+++ b/core/templates/core/tree_form.html
@@ -20,6 +20,7 @@
       <div class="row">
         <div class="col-xl">
           {{ form.speciesfk|as_crispy_field }}
+          <i>{% trans 'A = Evergreen tree, B = Deciduous tree, C = Pines and Conifers' %}</i><br><br>
         </div>
       </div>
       <div class="row">
