--- a/core/templates/core/tdb.html
+++ b/core/templates/core/tdb.html
@@ -138,9 +138,9 @@
                 <br><a href="{{ tree.url }}" target="_blank">{{ tree.url }}</a>
               {% endif %}
               </p>
-              <a href="{% url 'tree-detail' tree.id %}" class="btn btn-outline-info btn-sm" role="button" >{% trans 'Detail' %}</a>
-              <a href="{% url 'tree-update' tree.id %}" class="btn btn-outline-info btn-sm" role="button" >{% trans 'Edit' %}</a>
-              <a href="{% url 'tree-delete' tree.id %}" class="btn btn-outline-danger btn-sm" role="button" >{% trans 'Delete' %}</a>
+              <a href="{% url 'tree-detail' tree.id %}" class="btn btn-outline-info btn-sm mb-2" role="button" >{% trans 'Detail' %}</a>
+              <a href="{% url 'tree-update' tree.id %}" class="btn btn-outline-info btn-sm mb-2" role="button" >{% trans 'Edit' %}</a>
+              <a href="{% url 'tree-delete' tree.id %}" class="btn btn-outline-danger btn-sm mb-2" role="button" >{% trans 'Delete' %}</a>
             </div>
             <div class="col">
               <img src="{{ tree.treePic.url }}">
