--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -37,7 +37,7 @@
             <span class="visually-hidden">(current)</span></a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="{% url 'core-tdb' %}">{% trans "Dashboard" %}</a>
-            <a class="dropdown-item" href="#">{% trans "All photos" %}</a>
+            <a class="dropdown-item" href="{% url 'photo-list' user.pk %}">{% trans "All photos" %}</a>
           </div>
         </li>
         <li class="nav-item dropdown">
