--- a/start/templates/start/home.html
+++ b/start/templates/start/home.html
@@ -19,7 +19,7 @@
             <div class="card-header">{% trans "What?" %}</div>
             <div class="card-body">
               <h4 class="card-title">{% trans "What is kawaïtree?" %}</h4>
-              <p class="card-text">{% trans "Kawaïtree is an app that help you manage your bonsaï collection." %}</p>
+              <p class="card-text">{% trans "Kawaïtree is an app that helps you manage your bonsaï collection." %}</p>
             </div>
           </div>
         </div>
