all photos pagination V1.1 - bugs

--- a/core/templates/core/tree_detail.html
+++ b/core/templates/core/tree_detail.html
@@ -20,8 +20,8 @@
             {% endif %}
             <br>
             {% if request.user == tree.ownerfk %}
-              <a href="{% url 'tree-update' tree.id %}" class="btn btn-outline-info btn-sm" role="button">{% trans 'Edit' %}</a>
-              <a href="{% url 'tree-delete' tree.id %}" class="btn btn-outline-danger btn-sm" role="button">{% trans 'Delete' %}</a>
+              <a href="{% url 'tree-update' tree.id %}" class="btn btn-outline-info btn-sm mb-2" role="button">{% trans 'Edit' %}</a>
+              <a href="{% url 'tree-delete' tree.id %}" class="btn btn-outline-danger btn-sm mb-2" role="button">{% trans 'Delete' %}</a>
             {% endif %}
           </div>
           <div class="col">
