--- a/core/templates/core/photo_detail.html
+++ b/core/templates/core/photo_detail.html
@@ -5,7 +5,7 @@
 <div class="container" xmlns="http://www.w3.org/1999/html">
     <h1 class="mt-3">{% trans 'Detail' %}</h1>
     <div class="card text-white bg-secondary mb-3">
-      <div class="card-header">{{ object.treefk }}</div>
+      <div class="card-header"><a href="{% url 'tree-detail' object.treefk.id %}">{{ object.treefk }}</a></div>
       <div class="card-body">
         <div class="row">
           <div class="col">
